0.0200      Thu Jan 21 19:10:28 IST 2010
        - Fixed some validation errors in the XSLT stylesheet that caused
        the Firefox and Opera browser to give up with an error.
            - <xsl:call-template /> cannot operate on an <xsl:value-of />
                or have a select="." attribute.
            - <xsl:apply-templates /> has a mode="..." attribute instead
            of a name="..." attribute.
        - Now the conversion-to-text supports more tags and elements
        that were previously mis-handled (with tests).
        - Add keywords to the META.yml.
        
0.0109 Sat Oct 31 14:44:35 IST 2009
        - Fixed the tests if XML-LibXSLT generates indented XML.
            - as is the case on Mandriva Cooker and other systems.
            - http://nntp.x.perl.org/group/perl.cpan.testers/5800617
            - was done by removing indentation from both places.

0.0108  Wed Mar  4 22:10:25 IST 2009
        - Sorted out the installation of the extradata elements.

0.0107  Tue Mar  3 19:58:34 IST 2009
        - converted Build.PL to inc/XML/Grammar/Builder.pm .

0.0106 Mon Feb 16 10:14:43 IST 2009
        - set the minimum version of perl that can compile this module,
        to perl-5.8.x as it requires some ":utf8" stuff, and fails on
        perl-5.6.x:
            - http://nntp.x.perl.org/group/perl.cpan.testers/3301395

0.0105 Sat Feb 14 21:18:05 IST 2009
        - avoided creating an xmlns="" attribute in the output of several
        elements which caused the XHTML to be invalid.

0.0104  Thu Aug 21 17:39:45 IDT 2008
        - Removed a binmode ":utf8" call from t/to-xhtml.t to settle
        XML-LibXML on Mandriva Cooker and elsewhere.
            - see https://qa.mandriva.com/show_bug.cgi?id=41993

0.0103  Sat Aug  2 11:15:14 IDT 2008
        - "documented" open in lib/XML/Grammar/Fortune.pm due to its
        use Fatal call to settle t/pod-coverage.t.

0.0102  Thu Jul 31 15:58:08 IDT 2008