@@ -28,6 +28,7 @@ t/data/text-results/raw-fort-empty-info-1.txt
 t/data/text-results/raw-fort-with-info-1.txt
 t/data/text-results/screenplay-fort-sample-1.txt
 t/data/text-results/screenplay-fort-sample-2-long-line.txt
+t/data/text-results/screenplay-fort-sample-3-with-inlinedesc.txt
 t/data/xhtml-results/irc-conversation-4-several-convos.xhtml
 t/data/xhtml-results/irc-convos-and-raw-fortunes-1.xhtml
 t/data/xhtml-results/quote-fort-sample-10-with-hyperlink.xhtml
@@ -59,6 +60,7 @@ t/data/xml/raw-fort-empty-info-1.xml
 t/data/xml/raw-fort-with-info-1.xml
 t/data/xml/screenplay-fort-sample-1.xml
 t/data/xml/screenplay-fort-sample-2-long-line.xml
+t/data/xml/screenplay-fort-sample-3-with-inlinedesc.xml
 TODO
 t/pod-coverage.t
 t/pod.t
