@@ -3,7 +3,7 @@
 use strict;
 use warnings;
 
-use Test::More tests => 15;
+use Test::More tests => 16;
 use Test::Differences;
 
 use File::Spec;
@@ -14,7 +14,7 @@ use XML::LibXSLT;
 
 use XML::Grammar::Fortune::ToText;
 
-# TEST:$num_texts=15
+# TEST:$num_texts=16
 
 my @tests = (qw(
         raw-fort-empty-info-1
@@ -32,6 +32,7 @@ my @tests = (qw(
         quote-fort-sample-10-with-hyperlink
         screenplay-fort-sample-1
         screenplay-fort-sample-2-long-line
+        screenplay-fort-sample-3-with-inlinedesc
     ));
 
 sub read_file
